--- a/src/components/card-prduct/cardProduct.css
+++ b/src/components/card-prduct/cardProduct.css
@@ -6,5 +6,34 @@
     margin: 3px;
     background: rgb(248, 235, 159);
     border: 2px solid rgb(76, 45, 4);
-    border-radius: 10px;
+    border-radius: 20px;
+}
+
+.card__button {
+    display: flex;
+    justify-content: space-around;
+}
+
+.card__img {
+    width: 180px;
+    height: 100px;
+    margin: 8px;
+    border-radius: 12px;
+    border: 2px solid rgb(164, 100, 3); 
+}
+
+.card__info {
+    width: 180px;
+    height: 120px;
+    margin: 8px;
+    font-size: 1.4rem;
+}
+
+.card__text {
+    display: flex;
+}
+
+.info__name {
+    width: 50px;
+    margin-right: 10px;
 }
