--- a/src/components/cart/cart-blockProduct-component/block-Img/cart-productImg.css
+++ b/src/components/cart/cart-blockProduct-component/block-Img/cart-productImg.css
@@ -7,3 +7,9 @@
     font-size: 3.0rem;
 }
 
+@media (max-width: 900px) {
+    .cart__img {
+        width: 90%;
+        justify-content: center;
+    }
+}
