--- a/src/components/cart/cart-blockProduct-component/block-count/cart-productCount.css
+++ b/src/components/cart/cart-blockProduct-component/block-count/cart-productCount.css
@@ -59,3 +59,19 @@
     font-weight: 600;
     color: rgb(242, 21, 6);
 }
+
+@media (max-width:900px) {
+
+    .cart__count {
+        width: 40%;
+    }
+   
+}
+
+@media (max-width:480px) {
+
+    .cart__count {
+        width: 90%;
+    }
+   
+}
