--- a/src/components/blocks/blockCart.css
+++ b/src/components/blocks/blockCart.css
@@ -35,4 +35,17 @@
     font-size: 2.4rem;
 }
 
+@media (max-width: 900px) {
+    .cart__page {
+        width: 90%;
+    }
+
+    .cart_block_product {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: auto;
+    }
+}
+
 
