--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -5,3 +5,10 @@
     width: 100%;
     height: auto;
   }
+
+  @media (max-width: 900px) {
+    #cart-page {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
