--- a/src/style.css
+++ b/src/style.css
@@ -120,3 +120,38 @@ button {
     cursor: pointer;
 }
 
+@media (max-width: 900px) {
+    #main-page {
+       flex-direction: column;
+       align-items: center;
+    }
+
+    .header__logo {
+        font-size: 2.0rem;
+    }
+
+    .header__count {
+        font-size: 2.0rem;
+    }
+
+    .header__cart {
+        width: 30px;
+        height: 30px;
+    }
+}
+
+@media (max-width:480px) {
+
+    .header__logo {
+        font-size: 1.2rem;
+    }
+
+    .header__count {
+        font-size: 1.2rem;
+    }
+
+    .header__cart {
+        width: 20px;
+        height: 20px;
+    }
+}
