--- a/src/components/blocks/blockDetails.css
+++ b/src/components/blocks/blockDetails.css
@@ -1,19 +1,52 @@
 #details-page {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: auto;
-  }
-  
-.product__details {
-    display: flex;
+  display: flex;
   align-items: center;
   justify-content: center;
-  width: 70%;
-  height: 400px;
-  margin-top: 50px;
+  width: 100%;
+  height: auto;
+}
+
+.product__details {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 80%;
+  height:80vh;
   background: rgb(164, 100, 3);
   border: 2px solid rgb(76, 45, 4);
   border-radius: 24px;
+  font-size: 4rem;
+}
+
+.details__block__img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 45%;
+  height: 96%;
+}
+
+.details__block__text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 45%;
+  height: 96%; 
+}
+
+.details__img {
+  width: 100%;
+  height: 36vh;
+  border-radius: 12px;
+  border: 2px solid rgb(76, 45, 4);
+}
+
+.details__title {
+  width: 100%;
+}
+
+.details__description {
+  font-size: 1.6rem;
 }
