feat: add info details for product

--- a/src/components/blocks/blockDetails.css
+++ b/src/components/blocks/blockDetails.css
@@ -30,8 +30,7 @@
 .details__block__text {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+  align-items: flex-start;
   width: 45%;
   height: 96%; 
 }
@@ -45,8 +44,44 @@
 
 .details__title {
   width: 100%;
+  margin: 10px 0;
 }
 
 .details__description {
   font-size: 1.6rem;
+  margin: 10px 0;
+}
+
+.line__details {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0;
+  background: black;
+}
+
+.discount__product {
+  margin: 10px 0;
+  font-size: 2.0rem;
+}
+
+.rating__product {
+  margin: 10px 0;
+  font-size: 2.0rem;
+}
+.stock__product {
+  margin: 10px 0;
+  font-size: 2.0rem;
+}
+
+.brand__product {
+  margin: 10px 0;
+  font-size: 2.6rem;
+  color:blanchedalmond
+}
+
+.price__product {
+  margin: 10px 0;
+  font-size: 3.0rem;
+  font-weight: 800;
+  color:blanchedalmond
 }
