add filtr category

--- a/src/style.css
+++ b/src/style.css
@@ -123,6 +123,10 @@ button {
     cursor: pointer;
 }
 
+button:hover {
+    background-color: tan;
+}
+
 @media (max-width: 900px) {
 
     .header__logo {
