--- a/src/components/blocks/blockProducts.css
+++ b/src/components/blocks/blockProducts.css
@@ -10,6 +10,63 @@
     border-radius: 24px;
 }
 
+.management__cards {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    margin: 5px;
+    background: rgb(248, 235, 159);
+    border: 2px solid rgb(76, 45, 4);
+    border-radius: 15px;
+}
+
+.sort__product {
+    position: relative;
+    display: inline-block;
+}
+
+.btn__sort {
+    min-width: 160px;
+    max-height: 26px;
+    margin: 0 0 0 5px;
+    border-radius: 15px;
+    border: 1px solid black;
+}
+
+.btn_show {
+    border-radius: 15px 15px 0 0;
+}
+
+.sort__content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    margin: 0 0 0 5px;
+    background: rgb(248, 235, 159);
+    border-radius: 0 0 15px 15px;
+    border: 1px solid rgb(76, 45, 4);
+    overflow: hidden;
+    z-index: 1;
+}
+
+.sort__content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 1.4rem;
+    cursor: pointer;
+}
+
+.sort__content a:hover {
+    background: tan;
+}
+
+.show {
+    display: block;
+}
+
 @media (max-width: 900px) {
     .block__product {
         width: 70%;
