--- a/src/components/blocks/blockProducts.css
+++ b/src/components/blocks/blockProducts.css
@@ -9,10 +9,18 @@
     border: 2px solid rgb(76, 45, 4);
     border-radius: 24px;
 }
+.block__cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
+    height: auto;
+}
 
 .management__cards {
     display: flex;
     align-items: center;
+    justify-content: space-around;
     width: 100%;
     height: 50px;
     margin: 5px;
@@ -50,7 +58,7 @@
     z-index: 1;
 }
 
-.sort__content a {
+.sort__content p {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -59,7 +67,7 @@
     cursor: pointer;
 }
 
-.sort__content a:hover {
+.sort__content p:hover {
     background: tan;
 }
 
