--- a/src/components/blocks/blockProducts.css
+++ b/src/components/blocks/blockProducts.css
@@ -22,7 +22,7 @@
     align-items: center;
     justify-content: space-around;
     width: 100%;
-    height: auto;
+    max-height: 60px;
     margin: 5px;
     background: rgb(248, 235, 159);
     border: 2px solid rgb(76, 45, 4);
