--- a/src/components/management-cards/search/search.css
+++ b/src/components/management-cards/search/search.css
@@ -21,9 +21,10 @@
 
 .search__input {
   width: 80%;
-  background: transparent;
   outline: none;
   border: 0;
+  border-radius: 5px;
+  background: transparent;
 }
 
 .hide {
